# CreditScoring

./: pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-tests.yml
notebooks/: CUERVO_Nicolas_2_notebook_modélisation_092024.ipynb  Untitled-1.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/220367390655911565/: meta.yaml
notebooks/mlruns/220367390655911565/0a36878b89a94f02ade8155ab0e1aef1/: meta.yaml
notebooks/mlruns/220367390655911565/0a36878b89a94f02ade8155ab0e1aef1/metrics/: model_score  roc_auc
notebooks/mlruns/220367390655911565/0a36878b89a94f02ade8155ab0e1aef1/tags/: mlflow.log-model.history  mlflow.runName
notebooks/mlruns/220367390655911565/c8675562f0aa479f8eec6b4055958b6c/: meta.yaml
notebooks/mlruns/220367390655911565/c8675562f0aa479f8eec6b4055958b6c/metrics/: model_score  roc_auc
notebooks/mlruns/220367390655911565/c8675562f0aa479f8eec6b4055958b6c/tags/: mlflow.log-model.history  mlflow.runName
notebooks/mlruns/220367390655911565/fb23ad99216c4fc8a6dbf9eebe2074f1/: meta.yaml
notebooks/mlruns/220367390655911565/fb23ad99216c4fc8a6dbf9eebe2074f1/metrics/: model_score  roc_auc
notebooks/mlruns/220367390655911565/fb23ad99216c4fc8a6dbf9eebe2074f1/tags/: mlflow.runName  (+2 more)
notebooks/mlruns/models/Baseline-log_reg/: meta.yaml
notebooks/mlruns/models/random_forest/: meta.yaml
notebooks/mlruns/models/random_forest-poly_features/: meta.yaml
projet07/: custom_resamplers.py  custom_transformers.py  functions07.py  model_evaluation.py  model_exploitation.py  optuna_aids.py  setup.py
tests/: test_model_evaluation.py
(+13 files in other folders)
