[tool.poetry]
name = "projet07"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
jupyterlab = "^4.2.5"
mlflow = "^2.16.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.1"
optuna = "^4.0.0"
lightgbm = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
