[tool.poetry]
name = "projet07"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
jupyterlab = "^4.2.5"
mlflow = "^2.16.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.1"
optuna = "^4.0.0"
lightgbm = "^4.5.0"
imbalanced-learn = "^0.12.3"
virtualenv = "^20.26.6"
llvmlite = "^0.43.0"
cython = "^3.0.11"
numpy = "^2.0"
shap = "^0.46.0"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
